--- a/polaris.shopify.com/src/components/IconsPage/IconsPage.module.scss
+++ b/polaris.shopify.com/src/components/IconsPage/IconsPage.module.scss
@@ -20,12 +20,16 @@
   margin: auto;
   z-index: 3;
   overflow: auto;
+  z-index: 11;
+  border-radius: var(--border-radius-600);
+  overflow: auto;
 
   @media screen and (max-width: $breakpointMobile) {
     top: auto;
     bottom: 0;
     max-width: 100%;
     max-height: 80vh;
+    border-radius: 0;
   }
 }
 
@@ -36,7 +40,7 @@
   bottom: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.5);
-  z-index: 2;
+  z-index: 10;
 }
 
 .NoSearchResults {
